--- a/waterblast-automation/navigator-hose-drive.html
+++ b/waterblast-automation/navigator-hose-drive.html
@@ -261,7 +261,7 @@
         </div>
         <div class="col-sm-2 col-centered">
           <a href="../rotary-waterblast-tools/rotary-swivels.html"><img class="img-responsive" src="../assets/img/product/thumb-swivel-sg.jpg" alt="SG Swilvel Models">
-          <h5>SG Swilvel Models</h5></a>
+          <h5>SG Swivel Models</h5></a>
         </div>
         <div class="col-sm-2 col-centered">
           <a href="../rotary-waterblast-tools/backout-prevention.html"><img class="img-responsive" src="../assets/img/thumb/thumb-backout-preventers.jpg" alt="Backout Prevention for high pressure pipe cleaning">
